@@ -3,6 +3,7 @@ Changes from jTDS 1.2.6
 
 08/22/2012 - Holger Rehn
  o Applied patch #111 adding Kerberos support, provided by Tepper Tong.
+ o Updated feature matrix for SQL Server 2008 compatibility (Bug #643).
 
 08/17/2012 - Holger Rehn
  o Added service provider configuration file for JDBC driver class (Bug #659).
